--- a/codergb-hub-profile/index.html
+++ b/codergb-hub-profile/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>codergb-profile</title>
+  <title>%VITE_APP_NAME%</title>
 </head>
 <body>
   <div id="app"></div>
